# bambu-homelab

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
.cargo/: config.toml
config/: nats-server.conf
crates/api/: Cargo.toml
crates/api/src/: main.rs  models.rs  state.rs
crates/api/src/auth/: jwt.rs  middleware.rs  mod.rs  routes.rs
crates/api/src/db/: mod.rs  models.rs  schema.rs
crates/api/src/routes/: mod.rs  printers.rs  ws.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: bambu_mqtt.rs  bambu_types.rs  commands.rs  ftp.rs  main.rs  printer_manager.rs  translate.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs  telemetry.rs
crates/shared/: Cargo.toml  build.rs
crates/shared/src/: config.rs  error.rs  lib.rs
dashboard/: .gitignore  angular.json  package-lock.json  package.json  proxy.conf.json
dashboard/src/: index.html  styles.css
dashboard/src/app/: app.config.ts  app.routes.ts  app.ts  styles.css
dashboard/src/app/core/: auth.guard.ts  auth.interceptor.ts
dashboard/src/app/core/models/: auth.model.ts  command.model.ts  printer.model.ts
dashboard/src/app/core/services/: auth.service.ts  notification.service.ts  printer.service.ts  telemetry.store.ts  theme.service.ts  websocket.service.ts
dashboard/src/app/features/add-printer/: add-printer.page.ts
dashboard/src/app/features/admin/: users.page.ts
dashboard/src/app/features/dashboard/: dashboard.page.ts  printer-card.component.ts
dashboard/src/app/features/fleet/: filament-panel.component.ts  fleet.page.ts
dashboard/src/app/features/login/: login.page.ts
dashboard/src/app/features/printer-detail/: ams-panel.component.ts  camera-panel.component.ts  control-panel.component.ts  gcode-preview.component.ts  history-panel.component.ts  hms-panel.component.ts  info-panel.component.ts  print-panel.component.ts  print-progress.component.ts  printer-detail.page.ts  queue-panel.component.ts  stats-panel.component.ts  temperature-panel.component.ts  version-panel.component.ts
dashboard/src/app/shared/components/: sparkline.component.ts  status-badge.component.ts
docs/reference/: x1c-mqtt-report-sample.json
migrations/2026-04-19-000001_create_users/: up.sql
migrations/2026-04-19-000002_create_printers/: down.sql  up.sql
proto/bambu/v1/: telemetry.proto
scripts/: setup-dev.sh
services/timelapse/: capture.sh
services/video-relay/: nginx.conf  start.sh
services/web/: nginx.conf
