[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# NATS
async-nats = "0.46"
nkeys = "0.4"

# Protobuf
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
bambu-shared = { path = "crates/shared" }

# MQTT
rumqttc = { version = "0.24", features = ["use-rustls"] }


# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# WebSocket utilities
futures-util = "0.3"

# Database
diesel = { version = "2.2", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9"

# FTPS
suppaftp = { version = "6", features = ["native-tls", "deprecated"] }
native-tls = "0.2"

# Base64
base64 = "0.22"