[package]
name = "bambu-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "bambu-api"
path = "src/main.rs"

[dependencies]
bambu-shared = { workspace = true }
axum = { workspace = true, features = ["ws", "multipart"] }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-nats = { workspace = true }
prost = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }

base64 = { workspace = true }