[package]
name = "bambu-shared"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-nats = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
